<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/table_back_newit"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>

    <!-- gallows area -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:gravity="center"
        android:paddingTop="15dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/gallows"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:src="@drawable/android_hangman_gallows" />

        <ImageView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/head"
            android:paddingLeft="108dp"
            android:paddingTop="23dp"
            android:src="@drawable/android_hangman_head" />

        <ImageView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/body"
            android:paddingLeft="120dp"
            android:paddingTop="53dp"
            android:src="@drawable/android_hangman_body" />

        <ImageView
            android:id="@+id/arm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arm"
            android:paddingLeft="100dp"
            android:paddingTop="60dp"
            android:src="@drawable/android_hangman_arm1" />

        <ImageView
            android:id="@+id/arm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arm"
            android:paddingLeft="120dp"
            android:paddingTop="60dp"
            android:src="@drawable/android_hangman_arm2" />

        <ImageView
            android:id="@+id/leg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/leg"
            android:paddingLeft="101dp"
            android:paddingTop="90dp"
            android:src="@drawable/android_hangman_leg1" />

        <ImageView
            android:id="@+id/leg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/leg"
            android:paddingLeft="121dp"
            android:paddingTop="90dp"
            android:src="@drawable/android_hangman_leg2" />
    </RelativeLayout>

    <!-- word spaces -->

    <LinearLayout
        android:id="@+id/word"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="#FFFFFFFF"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp" >
    </LinearLayout>

    <!-- letters --><![CDATA[

    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    ]]>



    <Button
        android:id="@+id/hintbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="#3f8bd3"
        android:text="@string/hint"></Button>

    <RelativeLayout
        android:id='@+id/relrgr'
        android:layout_width="wrap_content"
        android:layout_height="348dp">



        <GridView
            android:id="@+id/letters"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:background="@drawable/table_back_newit"
            android:horizontalSpacing="5dp"
            android:numColumns="7"
            android:padding="5dp"
            android:stretchMode="columnWidth"
            android:verticalSpacing="7dp">

        </GridView>
    </RelativeLayout>



</LinearLayout>