<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#e4dc6f"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HowToActivity">




    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>


    <TextView
        android:id="@+id/howto"
        android:layout_width="379dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/howto"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="312dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/howto"
        android:layout_marginTop="76dp"

        android:background="#e4dc6f"
        android:gravity="center"
        android:text="@string/Paragraph"
        android:textAlignment="textStart"
        android:textAllCaps="true"

        android:textColor="@android:color/black"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/startgamebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:text="@string/Startgame"
        android:background="@drawable/startshape"/>

</RelativeLayout>